--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
-    "commander": "^2.15.1"
+    "commander": "^2.15.1",
+    "https": "^1.0.0"
   }
 }
