--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
+    "color": "^3.0.0",
+    "colors": "^1.3.0",
     "commander": "^2.15.1",
     "https": "^1.0.0"
   }
