--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "color": "^3.0.0",
     "colors": "^1.3.0",
     "commander": "^2.15.1",
+    "concat-stream": "^1.6.2",
     "https": "^1.0.0"
   }
 }
