--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "colors": "^1.3.0",
     "commander": "^2.15.1",
     "concat-stream": "^1.6.2",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "prettyjson": "^1.2.1"
   }
 }
