--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "commander": "^2.15.1",
     "concat-stream": "^1.6.2",
     "https": "^1.0.0",
+    "inquirer": "^6.0.0",
     "prettyjson": "^1.2.1"
   }
 }
