--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "concat-stream": "^1.6.2",
     "https": "^1.0.0",
     "inquirer": "^6.0.0",
+    "opn": "^5.3.0",
     "prettyjson": "^1.2.1"
   }
 }
