--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   },
   "dependencies": {
     "chalk": "^2.4.1",
-    "co": "^4.6.0",
-    "co-prompt": "^1.0.0",
-    "colors": "^1.3.0",
+    "clui": "^0.3.6",
     "commander": "^2.15.1",
     "concat-stream": "^1.6.2",
     "https": "^1.0.0",
