--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sprice-cli",
-  "version": "1.0.1",
+  "name": "sprice",
+  "version": "1.0.0",
   "description": "Query stock price",
   "main": "index.js",
   "scripts": {
